ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: atef-k8s.cloud-stacks.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wordpress
              port:
                number: 80
  tls:
    - hosts:
      - atef-k8s.cloud-stacks.com
      secretName: self-signed-tls-secret
